--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
     crossorigin="anonymous"></script>
   <link href="./css/style.css" rel="stylesheet">
   <script src="./js/main.js"></script>
+
+
+
 </head>
 
 <body>
@@ -24,24 +27,30 @@
         <img class="header-logo-2" logo=image src="./images/logo-2.png" alt="logo">
       </a>
 
-      <div id="logoutModule">
-        <div class="collapse navbar-collapse justify-content-end">
-          <div>
+      <!-- <div id="logoutModule"> -->
+      <div class="collapse navbar-collapse justify-content-center search-layout">
+        <div class="search-layout-child">
+          <div id="logoutModule-1">
             <form class="d-flex" style="margin-right:10px;">
               <input id="inputSearch" class="form-control me-2" type="text" placeholder="Search" />
               <button id="btnSearchSong" class="btn btn-warning" type="submit">Search</button>
             </form>
           </div>
-        </div>
-        <div class="collapse navbar-collapse justify-content-end" id="mob-navbar">
 
-          <button class="btn btn-warning" id="btnLogout">Logout</button>
+        </div>
+
+      </div>
+      <div class="collapse navbar-collapse justify-content-end">
+        <div class="collapse navbar-collapse" id="mob-navbar">
+          <div id="logoutModule-2">
+            <button class="btn btn-warning" id="btnLogout">Logout</button>
+          </div>
         </div>
       </div>
+      <!-- </div> -->
 
 
       <div id="loginModule">
-
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mob-navbar"
           aria-label="Toggle">
           <span class="navbar-toggler-icon"></span>
@@ -60,21 +69,37 @@
             </div>
           </div>
         </div>
-
       </div>
+
     </div>
   </nav>
   <div class="main-body">
 
     <h4 id="welcomeUser">Welcome to Music Website</h4>
     <div id="songsModule">
-
-
     </div>
+
     <br>
 
     <div id="playlistModule">
+    </div>
+  </div>
 
+  <br>
+  <br>
+
+  <div id="music-player" class="music-player">
+
+    <div class="media-control">
+
+      <button id="previous" class="btn">Previous</button>
+      <button id="next" class="btn">Next</button>
+    </div>
+
+    <audio id="audio-player" controls class="customize-player"></audio>
+    <div class="media-control2">
+      <button id="repeat" class="btn">Next</button>
+      <button id="shuffle" class="btn">Previous</button>
     </div>
   </div>
 
